feat: edit user profiles independently
